# rgbd2ply

./: .gitignore  README.md  pyproject.toml  setup.sh
config/: cam1_cam3_extrinsic.json
config/env_exports/: sam3_env.yml  wilor_env.yml
rgbd2ply/: __init__.py  __main__.py  auto_concepts.json  cli.py  concepts.py  config.py  config.yaml  discovery.py  fusion.py  labelspec.py  multi_concept_masks.py  object_registry.json  pipeline.py  prepare.py  review_ui.py  seed_masks.py  sweep.py
rgbd2ply/camera_utils/: __init__.py  back_projection.py  obbag.py  pipeline.py  sam3_masking_click.py
