[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbd2ply"
version = "2.0.0"
description = "Multi-camera RGBD → labelled pointcloud pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python-headless",
    "pyyaml",
]

[project.scripts]
rgbd2ply = "rgbd2ply.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rgbd2ply", "rgbd2ply.*"]
